--- a/caca/index.html
+++ b/caca/index.html
@@ -4,22 +4,22 @@
 	<img src="logoUS.png" class="logo">
 </div>
 <div class="background">
-<img src="1.png">
-<img src="4.jpg">
-<img src="5.jpg">
-<img src="6.jpg">
-<img src="7.jpeg">
-<img src="2.jpg">
-<img src="8.jpeg">
-<img src="9.jpg">
-<img src="birdo.png" class="birdo">
-<img src="10.jpg">
-<img src="11.png">
-<img src="12.png">
-<img src="13.jpg">
-<img src="3.jpg">
-<img src="14.jpg">
-<img src="15.jpg">
-<img src="pene.jpg">
+<img class="adpt" src="1.png" >
+<img class="adpt" src="4.jpg">
+<img class="adpt" src="5.jpg">
+<img class="adpt" src="6.jpg">
+<img class="adpt" src="7.jpeg">
+<img class="adpt" src="2.jpg">
+<img class="adpt" src="8.jpeg">
+<img class="adpt" src="9.jpg">
+<img  src="birdo.png" class="birdo">
+<img class="adpt" src="10.jpg">
+<img class="adpt" src="11.png">
+<img class="adpt" src="12.png">
+<img class="adpt" src="13.jpg">
+<img class="adpt" src="3.jpg">
+<img class="adpt" src="14.jpg">
+<img class="adpt" src="15.jpg">
+<img class="adpt" src="pene.jpg">
 </div>
 
