--- a/HappyBird/index.html
+++ b/HappyBird/index.html
@@ -7,9 +7,9 @@
     <title>Happy Bird</title>
   </head>
   <header>
-    <img src="assets/bird-0.png">
-    <h1> HAPPY BIRD!</h1>
-    <img src="assets/bird-0.png">
+    <img class="bird" src="assets/bird-0.png">
+    <img class="title" src="assets/title.png">
+    <img class="bird" src="assets/bird-0.png">
   </header>
   <body>
     <canvas id="gameCanvas" width="800" height="600"></canvas>
